--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "projetofinal-renan",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node --watch app/server.js",
@@ -14,5 +13,7 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "mongoose": "^8.1.2"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
